# rustGPU

./: Cargo.toml  Makefile  SetEnv.bash  TEST  imgui.ini  out
res/shaders/: mesh.vert.spv  sh.comp.spv  sh.frag.spv
res/textures/: cube.aseprite
src/: constants.rs  errors.rs  graphics.rs  logger.rs  macros.rs  main.rs  player.rs  utility.rs
src/game/: mod.rs
src/graphics/: mod.rs  model.rs
src/gui/: mod.rs  vk_gui.rs
src/imgui/: logger.rs  mod.rs  vk_imgui.rs
src/ssrc/: gradient_color.comp  mesh.vert  mesh_bk.vert  sh.frag
src/vk_bindings/: graphics.rs  mod.rs  objects.rs
src/vk_bindings/init/: buffers.rs  command.rs  d_messenger.rs  depth_buffer.rs  descriptor.rs  device.rs  framebuffer.rs  image.rs  instance.rs  memory.rs  mod.rs  p_device.rs  pipeline.rs  render_pass.rs  sampler.rs  surface.rs  swapchain.rs  sync_obj.rs
src/vulkan/: helpers.rs  logger.rs  mod.rs  objects.rs  old_log.rs
src/vulkan/graphics/: frame.rs  mesh.rs  mod.rs  model.rs  r_object.rs  types.rs
src/vulkan/init/: buffer.rs  buffers.rs  c_pipeline.rs  command.rs  d_messenger.rs  depth_buffer.rs  descriptor.rs  descriptors.rs  descriptors2.rs  device.rs  g_pipeline.rs  image.rs  image2.rs  imgui.rs  instance.rs  memory.rs  mod.rs  p_device.rs  pipeline.rs  pipeline2.rs  render_pass.rs  sampler.rs  surface.rs  swapchain.rs  sync_obj.rs  sync_objects.rs
src/vulkan/materials/: metalic.rs  mod.rs
src/vulkan/objects/: d_stack.rs  d_wrapper.rs  mod.rs  wrapper.rs
src/window/: mod.rs  vk_win.rs
ssrc/: sh.frag
