[package]
name = "c_bind"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.3"
cstr = "0.2.11"
easy-gltf = "1.1.1"
glfw = {version = "0.54.0", features = ["vulkan"]}
gltf = {version = "1.4.0", features = ["import"]}
image = "0.24.7"
memoffset = "0.9.0"
nalgebra = "0.32.3"
static_assertions = "1.1.0"
thiserror = "1.0.50"
tobj = "4.0.0"
zerocopy = "0.7.31"

