[package]
name = "c_bind"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.3"
cstr = "0.2.11"
easy-gltf = "1.1.1"
env_logger = "0.10.1"
gltf = { version = "1.4.0", features = ["import"] }
gpu-allocator = "0.23.0"
image = "0.24.7"
imgui = "0.11.0"
imgui-rs-vulkan-renderer = { version = "1.10.0", features = ["dynamic-rendering", "gpu-allocator"] }
imgui-sdl2 = "0.15.3"
log = "0.4.20"
memoffset = "0.9.0"
nalgebra = "0.32.3"
sdl2 = "0.36.0"
static_assertions = "1.1.0"
thiserror = "1.0.50"
tobj = "4.0.0"
zerocopy = "0.7.31"

