[package]
name = "c_bind"
version = "0.1.0"
edition = "2021"

[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["vulkan"]
vulkan = []


[dependencies]
arrayvec = "0.7.4"
ash = "0.37.3"
convert_case = "0.6.0"
cstr = "0.2.11"
derivative = "2.2.0"
env_logger = "0.10.1"
gltf = { version = "1.4.0", features = ["import", "utils", "names"] }
gpu-allocator = "0.25.0"
image = "0.24.7"
imgui = "0.11.0"
imgui-rs-vulkan-renderer = { version = "1.12.0", features = ["dynamic-rendering", "gpu-allocator"] }
imgui-sdl2 = "0.15.3"
log = "0.4.20"
memoffset = "0.9.0"
nalgebra = { version = "0.32.3", features = ["mint"] }
nalgebra-glm = "0.18.0"
paste = "1.0.14"
sdl2 = "0.36.0"
static_assertions = "1.1.0"
thiserror = "1.0.50"
tobj = "4.0.0"
zerocopy = "0.7.31"

